Adding a linkedin icon

--- a/config/info.yml
+++ b/config/info.yml
@@ -2,6 +2,7 @@
 
 name:    <%= env :name,    'Laura Diane Hamilton' %>
 twitter: <%= env :twitter, 'lauradhamilton' %>
+linkedin: <%= env :linkedin, 'lauradhamilton' %>
 github:  <%= env :github,  'lauradhamilton'  %>
 email:   <%= env :email,   'lauradhamilton@gmail.com'  %>
 about:   <%= env :about,   'Vice President of Analytics at BayRu, LLC' %>
